Feat: cat 컨트롤러, 스키마 생성

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-#mysql
-MYSQL_HOST=ec2-3-34-82-8.ap-northeast-2.compute.amazonaws.com
-MYSQL_PORT=3306
-MYSQL_USER_NAME=test
-MYSQL_DATABASE_NAME=cat-community
-MYSQL_PASSWORD=9501
+MONGODB_URI='mongodb+srv://jaden:469501@nestcluster.8c4tj7k.mongodb.net/cats?retryWrites=true&w=majority'
+
+PORT=8000
+
+MODE='dev'
